--- a/Pages/CadastroRealizado.cshtml
+++ b/Pages/CadastroRealizado.cshtml
@@ -5,8 +5,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<p>Seus dados foram recebidos e seu cadastro foi realizado com sucesso. Para fazer o login agora,
-    <a href="/Login">Clique aqui</a>.</p>
-<p>
-    <a class="btn btn-outline-success" href="/Login">Clique aqui para fazer o Login!</a>
-</p>
+<h4>Você está quase lá. Só falta confirmar seu e-mail.</h4>
+<p>Seus dados foram recebidos e seu cadastro foi realizado com sucesso. Para fazer o login, é necessário
+    acessar sua caixa de e-mails  e seguir as instruçoes disponíveis na mensagem que acabamos de enviar.
+ </p>
